

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical" 
    tools:context=".MainActivity" >
   
	  <Button
	      android:id="@+id/buttonGet"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:gravity="center"
	      android:layout_gravity="center"
	      android:layout_marginTop="14dp"
	      android:text="@string/buttonGet"
	      android:onClick="ActivityMainLayout_GetButtonCallback" />
	  

	   <TextView
          android:id="@+id/textViewGameID"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:layout_gravity="center"
          android:textSize="20sp" 
          android:text="@string/textViewGameID" 
          android:layout_margin="10dp"
        />
	  
	   
	  <Button
	      android:id="@+id/buttonGetList"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:gravity="center"
	      android:layout_gravity="center"
	      android:layout_marginTop="14dp"
	      android:text="@string/buttonGetList"
	      android:onClick="ActivityMainLayout_GetListButtonCallback" />
	  

	   <TextView
          android:id="@+id/textViewGamesIDs"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:layout_gravity="center"
          android:textSize="20sp" 
          android:text="@string/textViewGamesIDs" 
          android:layout_margin="10dp"
        />
	   
	   
	   <Button
	      android:id="@+id/clearInfo"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:gravity="center"
	      android:layout_gravity="center"
	      android:layout_marginTop="14dp"
	      android:text="@string/clearInfo"
	      android:onClick="ActivityMainLayout_ClearInfoCallback" 
	   />

</LinearLayout>
    
